# fsdump

./: .gitignore  Apfs.cpp  Apfs.h  AppleSparseimage.cpp  AppleSparseimage.h  CMakeLists.txt  Crc32.cpp  Crc32.h  Device.h  DeviceLinux.cpp  DeviceLinux.h  DeviceWindows.cpp  DeviceWindows.h  FileSystem.h  FsDump.sln  FsDump.vcxproj  FsDump.vcxproj.filters  GptPartitionMap.cpp  GptPartitionMap.h  ImageFile.cpp  ImageFile.h  MasterBootRecord.h  Ntfs.cpp  Ntfs.h  README.md  Vhdx.cpp  Vhdx.h  apfs_layout.h  main.cpp  ntfs_layout.h
compat/: endian.h
